bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: Missing closing brace `}' assumed here
var fin=false;
^